font shift fix

--- a/shared-assets/css/dcl.css
+++ b/shared-assets/css/dcl.css
@@ -8,11 +8,12 @@
    ====================================================
    ==================================================== */
 body {
-  font-family: "Open Sans", arial, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: #333;
-  -webkit-font-smoothing: auto;
+  font-style: normal;
+  font-optical-sizing: auto;
 }
 .skip-link {
   position: absolute;
@@ -29,6 +30,12 @@ body {
   font-weight: 300;
   line-height: 1.3;
   letter-spacing: -0.4px;
+}
+.domine, .domine a {
+  font-family: "Domine", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 .container-md, .container-lg {
   margin-right: auto;
@@ -60,12 +67,14 @@ h1.page-heading {
   margin-bottom: 0;
 }
 h2.page-subheading, h2.page-subheading a {
-  font-family: "Roboto Slab", palantino, serif;
-  font-size: 1.4rem;
-  font-weight: 300;
-  line-height: 1.3;
-  letter-spacing: -0.4px;
-  margin: 5px 0 15px;
+  font-family: "Domine", serif;
+  font-size: 1.3rem;
+  font-weight: 400;
+  line-height: 1.4;
+  margin: 5px 0 10px;
+}
+h2.page-subheading {
+  color: #333;
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Open Sans", arial, sans-serif;
